2010-01-01  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #16604: Changes in workspace are not shown automatically in pagetree

2010-11-30  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16581: Make jsFooterInline & jsFooterLibs available to render-preProcess hook (Thanks to Morton Jonuschat)

2010-11-30  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #16501: DBAL does not support multi-column indexes in create table queries

2010-11-30  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16614: common.js resets TYPO3 namespace (Thanks to Peter Kühn)

2010-11-29  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #15189: Frontend Editing edit panels are shown for content element types that cannot be edited

2010-11-29  Francois Suter  <francois@typo3.org>

	* Fixed bug #16583: Localization overview has no color-coded status anymore

2010-11-26  Francois Suter  <francois@typo3.org>

	* Fixed bug #16573: Register count_MENUOBJ is not properly initialized

2010-11-26  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16321: [scheduler] Numeric zero for representation of weekday sunday is not accepted (Thanks to Marcus Krause)
	* Fixed bug #16582: [Caching framework] Remove misleading memcached configuration example from config_default
	* Fixed bug #16317: [scheduler] Valid values generated from cron command does not contain integers only (Thanks to Marcus Krause)

2010-11-25  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16319: [scheduler] CronCmd class variable "values" does not contain integers only (Thanks to Marcus Krause)

2010-11-25  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #16322: Incorrect regexp in substituteMarkerArray

2010-11-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #16431: htmlArea RTE: in WebKit, clicking on image does not select it
	* Fixed bug #16571: htmlArea RTE: Configured height of link and image dialogue windows not honoured

2010-11-24  Stanislas Rolland  <typo3@sjbr.ca>
