@@ -1,3 +1,7 @@
+2010-12-01  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #16058: htmlArea RTE: Overlay to choose a color exceeds the viewport if many colors are defined
+
 2010-11-25  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Follow-up to bug #16431: htmlArea RTE: in WebKit, clicking on image does not select it
